Modified Title, Application Name, Description, Keyword, URL

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
-  <title>WEBSITE_NAME</title>
-  <meta name="application-name" content="WEBSITE_NAME">
-  <meta name="description" content="WEBSITE_DESCRIPTION">
+  <title>True TMN Makro</title>
+  <meta name="application-name" content="True TMN Makro">
+  <meta name="description" content="True TMN Makro">
   <!-- Control the behavior of search engine crawling and indexing: All Search Engines -->
   <meta name="robots" content="index, follow, noodp">
   <!-- Google Specific -->
@@ -14,9 +14,9 @@
   <!-- A deprecated tag that does the same as the keywords meta tag -->
   <meta name="classification" content="business">
   <!-- The same function as the keywords tag -->
-  <meta name="category" content="KEYWORD_1, KEYWORD_2, KEYWORD_3">
+  <meta name="category" content="True TMN Makro, True TMN, True Makro">
   <!-- Full domain name or web address -->
-  <meta name="url" content="https://WEBSITE_NAME.com/">
+  <meta name="url" content="https://truetmnmakro.com/">
   <!-- Website shows up in all countries and languages -->
   <meta name="coverage" content="Worldwide">
   <!-- A general age rating based on sites content -->
